namespace/llm/gemma3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gemma3
  namespace: llm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gemma3
  template:
    metadata:
      labels:
        app: gemma3
    spec:
      containers:
        - name: gemma3
          image: docker.io/name/gemma3:latest
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "2"
              memory: "4Gi"
              gpu.intel.com/i915: "1"
