namespace/llm/gemma3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mcp-hub
  namespace: mcp
spec:
  selector:
    app: mcp-hub
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
